--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-flutter.sdk=C:\\src\\flutter
-sdk.dir=C:\\Users\\ProBook\\AppData\\Local\\Android\\sdk
+flutter.sdk=/Users/leonelrivera/Development/flutter
+sdk.dir=/Users/leonelrivera/Library/Android/sdk
 flutter.buildMode=debug
 flutter.versionName=1.0.0
