--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 flutter.sdk=/Users/leonelrivera/Development/flutter
 sdk.dir=/Users/leonelrivera/Library/Android/sdk
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
