abb generado keystore y keys agregados

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=gsFILMS
-keyPassword=gsFILMS
-keyAlias=gsFILMS
+storePassword=gsfimls2025
+keyPassword=gsfimls2025
+keyAlias=gsfimls2025
 storeFile= /Users/leonelrivera/Documents/GitHub/gs-films/key/keystore.jks
