--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 flutter.sdk=/Users/leonelrivera/Development/flutter
 sdk.dir=/Users/leonelrivera/Library/Android/sdk
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.1
 flutter.versionCode=1
